Got POS tagging working, added metric class