@@ -2,7 +2,8 @@ name := "Anagram Evalation"
 
 version := "0.1"
 
-scalaVersion := "2.10.4"
+//scalaVersion := "2.10.4"
+scalaVersion := "2.11.2"
 
 scalaSource in Compile <<= baseDirectory(_ / "src")
 
@@ -24,11 +25,30 @@ scalacOptions ++= Seq(
 
 resolvers += "IESL Release" at "http://dev-iesl.cs.umass.edu/nexus/content/groups/public"
 
+resolvers += "Sonatype Releases" at "https://oss.sonatype.org/content/repositories/releases/"
+
+resolvers += "Sonatype Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots/"
+
+resolvers += "Scala Tools Snapshots" at "http://scala-tools.org/repo-snapshots/"
+
+resolvers += "ScalaNLP Maven2" at "http://repo.scalanlp.org/repo"
+
 libraryDependencies ++= Seq(
-  "org.scalatest" %% "scalatest" % "latest.release" % "test",
-  "cc.factorie" % "factorie" % "1.0",
-  "cc.factorie.app.nlp" % "pos" % "1.0-RC5"
-  //	, "com.typesafe"  %  "config"    % "1.2.0"
+  "org.scalatest" %% "scalatest" % "latest.release",
+  //"cc.factorie" % "factorie" % "1.0.0-RC1",
+  //"cc.factorie.app.nlp" % "all-models" % "1.0.0"
+  //"cc.factorie.app.nlp" % "pos" % "1.0-RC5"
+  //"org.scalanlp" % "chalk" % "1.3-SNAPSHOT",
+  //"org.scalanlp" %% "nak" % "1.2.0-SNAPSHOT",
+  //"org.scalanlp" %% "breeze" % "0.8.1",
+  //"org.scalanlp" % "breeze-natives_2.10" % "0.8.1",
+  //"org.scalanlp" % "epic_2.10" % "0.1" exclude ("com.typesafe.sbt", "sbt-pgp"),
+  //"org.scalanlp" %% "epic-parser-en-span" % "2014.9.15" exclude ("com.typesafe.sbt", "sbt-pgp"),
+  //"org.scalanlp" %% "epic-pos-en" % "2014.6.3-SNAPSHOT"
+  //"org.scalanlp" % "epic-all-models_2.10" % "0.1" exclude ("com.typesafe.sbt", "sbt-pgp")
+  "edu.stanford.nlp" % "stanford-corenlp" % "3.4",
+  "edu.stanford.nlp" % "stanford-corenlp" % "3.4" artifacts(Artifact("stanford-corenlp", "models") ),
+  "edu.stanford.nlp" % "stanford-parser" % "3.4"
 )
 
 incOptions := incOptions.value.withNameHashing(true)
@@ -39,3 +59,5 @@ incOptions := incOptions.value.withNameHashing(true)
 showSuccess := true
 
 showTiming := true
+
+javaOptions += "-Xmx2g -Xmx1500M -XX:-UseGCOverheadLimit -XX:-UseConcMarkSweepGC"
